[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/ConfirmDialog.gd" type="Script" id=1]
[ext_resource path="res://menus/MenuBG.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/SectionFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://menus/buttonFont.tres" type="DynamicFont" id=4]

[node name="ConfirmDialog" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuBG" parent="." instance=ExtResource( 2 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 820.0
margin_top = 448.0
margin_right = 1740.0
margin_bottom = 992.0
custom_constants/separation = 100
alignment = 1

[node name="QuestionText" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 920.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 3 )
text = "You sure?"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 920.0
margin_bottom = 544.0
custom_constants/separation = 120
alignment = 1

[node name="YesButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
custom_fonts/font = ExtResource( 4 )
text = "Yes"

[node name="NoButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 520.0
margin_right = 920.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
custom_fonts/font = ExtResource( 4 )
text = "No"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
